--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,52 @@
   align-items: center !important;
 }
 .cachet {
-  /* image width = 210px and height = 250px */
-  /*  5 is the common denominator 210 = 5 * 42 */
   position: absolute;
   width: 5vw;
   height: auto;
   margin: 0px;
+}
+.intro-text {
+  font-size: 0.7rem !important;
+}
+/* Hide Certain Modal Elements at very small screens */
+@media (max-width: 250px) {
+  /* City Modal extra small */
+  .location-grid {
+    padding: 2px !important;
+  }
+  .avatar-stories {
+    display: none !important;
+  }
+  .btn-comments {
+    display: none !important;
+  }
+}
+@media (max-width: 320px) {
+  /* Home Modal Hidden */
+  .home-heading {
+    font-size: 0.7rem !important;
+  }
+  .main-text {
+    display: none !important;
+  }
+  .location-grid {
+    padding: 2px !important;
+  }
+  .card-picture {
+    height: 130px !important;
+  }
+}
+
+.fixed-home-icon {
+  position: fixed;
+  left: 20px;
+  top: 45px;
+  z-index: 99;
+}
+.fixed-volume-icon {
+  position: fixed;
+  left: 20px;
+  top: 80px;
+  z-index: 99;
 }
